...
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navi_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@android:color/transparent"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/main_bottom_navigation" />

...
