<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_college_intro"
        android:title="学院简介" />
    <item
        android:id="@+id/nav_dean_speech"
        android:title="院长寄语" />
    <item
        android:id="@+id/nav_history"
        android:title="历史沿革" />
    <item
        android:id="@+id/nav_organization_structure"
        android:title="组织结构" />
    <item
        android:id="@+id/nav_academic_committee"
        android:title="学术委员会" />
</menu>
