<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_view_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/address"
        android:padding="16dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/text_view_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/telephone"
        android:padding="16dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/email"
        android:padding="16dp"
        android:textSize="18sp" />

    <com.tencent.tencentmap.mapsdk.maps.TextureMapView
        android:id="@+id/mapView"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>